# BioSim

./: README.md  main.py  pyproject.toml
biosim/: __init__.py  _config.py  _coordinate.py  _creature.py  _draw.py  _genome.py  _log.py  _world.py  user-config.toml  utils.py
tests/: test_coordinate.py  test_creature.py  test_utils.py
