[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'BioSim'
version = '0.0.1'
dependencies = [
    'loguru',
    'matplotlib',
    'numpy',
    'opencv-python',
    'pydantic',
    'rtoml',
    'tqdm',
]

[[project.authors]]
name = 'Dragon-GCS'
email = '878173121@qq.com'

[project.optional-dependencies]
dev = ['viztracer']
[tool.setuptools]
packages = ['BioSim']
